[Mouse KCM] Fix acceleration profile on X11

Summary:
LIBINPUT_PROP_ACCEL_PROFILE_ENABLED contains two values,
valueWriterPart<bool> function didn't handle it correctly.

BUG: 398713
FIXED-IN: 5.17.1

Reviewers: #plasma, romangg, ngraham

Reviewed By: #plasma, romangg, ngraham

Subscribers: anthonyfieroni, ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D24711